[project]
name = "pycontrols"
dynamic = ["version"]
description = "OS agnostic modules to control the host machine"
readme = "README.md"
authors = [{ name = "Vignesh Sivanandha Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Terminals :: Terminal Emulators/X Terminals"
]
keywords = ["system", "notification", "volume", "wifi", "console", "stdout", "workstation"]
requires-python = ">=3"
dependencies = [
    "volume-control",
    "pynotification",
    "pywifi-controls",
    "block-stdout",
    "pybrightness",
    "pywslocker"
]

[tool.setuptools]
packages = ["pycontrols"]

[tool.setuptools.dynamic]
version = {attr = "pycontrols.version"}

[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/thevickypedia/pycontrols"
"Bug Tracker" = "https://github.com/thevickypedia/pycontrols/issues"
